change some files from branch replit-ver
